deleting old drafts

--- a/_drafts/2020-09-13-snapshots-august-2023-italy.html
+++ b/_drafts/2020-09-13-snapshots-august-2023-italy.html
@@ -5,7 +5,7 @@ image: /assets/images/camera.png
 image-dark: /assets/images/camera-dark.png 
 headerImage: true 
 category: potpourri 
-rel-path: italy-23
+rel_path: italy-23
 description: "Snapshots of a STEM student: August 2023: Italy"
 author: kjros
 playlist: 2cFDkLKuOv6n5TZZkEat0E?si=8ef079b1ffcd4a81
@@ -117,15 +117,15 @@ images:
   loc: Rome, Italy 
   date: August 13, 2023
   desc: overlooking roma 
-- path: orange-street.jpg 
-  alt: orange buildings on roman street 
-  name: Roman Streets
-  loc: Rome, Italy
-  date: August 13, 2023
 - path: sant-angelo-statue.jpg
   alt: female statue inside castle 
   name: Castel Sant'Angelo 
   loc: Rome, Italy 
+  date: August 13, 2023
+- path: orange-street.jpg 
+  alt: orange buildings on roman street 
+  name: Roman Streets
+  loc: Rome, Italy
   date: August 13, 2023
 - path: outside-alice.jpg 
   alt: orange building between tree foliage 
