update for graduation

--- a/about.html
+++ b/about.html
@@ -5,32 +5,36 @@ layout: page
 <!-- ![Profile Image]({% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}) -->
 
 
+<div class="text-center">
+  <h1>
+    Hi, I'm Kaylee! Welcome to my site! 
+  </h1>
+</div>
+
 <div class="text-center" style="text-align:justify;text-justify:inter-word">
 
-  <img src="/assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
+
+  <img src="/assets/images/graduation.jpeg" class="img-thumbnail" alt="kaylee in her graduation gown and hat" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
+ 
+
+  <p>
+    I graduated from the Illinois Institute of Technology (IIT) in Chicago, IL, in May 2024. 
+    I recieved my Master's in Computer Science and my Bachelor's in Applied Mathematics. 
+  </p>
+
+  <p>
+    This started as a minor project; my advisor recommended I make a website to showcase my skills and work. I doubled down and began studying HTML, 
+    clicked through tutorials on Github pages, and stayed up all night tinkering with on-hover shadow boxes. 
+  </p>
   
   <p>
-    Hi, I'm Kaylee, also known as kjrosendahl (in one cadence). Welcome to my site. 
-  </p>
-
-  <p>
-    I'm a fourth year, studying for an MS in Computer Science and BS in Applied Mathematics at the Illinois Institute of Technology (IIT) 
-    in Chicago, IL. 
-  </p>
-
-  <p>
-    This started as a small, independent passion project. My advisor recommended I make a website to showcase my skills and work. I doubled down and 
-    studied HTML and CSS, clicked through tutorials on Github pages, and stayed up all night perfecting on-hover shadow boxes. 
-  </p>
-
-  <p>
-    He pry meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
+    He definitely meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
     I don't intend on merely fulfilling expectations. 
   </p>
 
   <p>
-    So, I've been growing this site, line by line. I hope to keep learning more about front-end development, and implementing new features 
-    in a way that truly reflects my interests, personality, and style. After all, a resume can only do so much. 
+    Having left a life of academia, I hope to get back into writing and designing, reflecting my interests, personality, and personal flair. 
+    After all, a resume can only do so much. 
   </p>
 
   <p>
@@ -45,11 +49,5 @@ layout: page
   </p>
 
   <p>Any questions? You know where to find me. </p>
-
-  <!-- <p><small>
-    To check out my music taste, try <a href="{{ site.url }}/blog/jukebox">this</a>.
-  </small></p> -->
-
-  
 
 </div> 
