--- a/potpourri.html
+++ b/potpourri.html
@@ -5,12 +5,14 @@ title: Potpourri
 
 <div class="text-center">
     <p>
-        The greatest consequence of growing up is independence. There's no one stopping you from 
-        hopping on a plane to an unknown city - whether you have a plan or not. 
+        My personal brand of hedonism, among other things, lies in spontaneity of traveling.
+        Despite the uncertain years that come with growing up, my most consistent trait has been a love for food, 
+        exploration, culture, art, and all things new. 
     </p>
+
     <p>
-        My most consistent trait is a love for new food, exploration, and travel. Here is a personal collection of my favorite adventures. 
-        Catch the best restaurants in Chi, views of NYC, and my summer in California. 
+        Here is a personal collection of my favorite adventures. Catch the best restaurants in Chi, views of NYC, 
+        my summer in California, my examination of Seattle, and my forray into Europe. 
     </p>
 </div>
 
