--- a/potpourri.html
+++ b/potpourri.html
@@ -12,7 +12,7 @@ title: Potpourri
 
     <p>
         Here is a personal collection of my favorite adventures. Catch the best restaurants in Chi, views of NYC, 
-        my summer in California, my examination of Seattle, and my forray into Europe. 
+        my summer in California, my examination of Seattle, and my foray into Europe. 
     </p>
 </div>
 
