--- a/about.html
+++ b/about.html
@@ -39,8 +39,9 @@ layout: page
 
   <p>
     If you're interested in my work on data filtering, satellite simulations, or Chicago lead poisoning, click <a href="{{ site.url }}/projects">here</a>.
-    If you want to learn about my involvement in the best (female-led) organization at IIT, read <a href="{{ site.url }}/activities/wistem">this</a>.
-    And for fun posts and pictures, go ahead and explore <a href="{{ site.url }}/blog">my blog</a> and <a href="{{ site.url }}/potpourri">my picture gallery</a>!
+    <!-- If you want to learn about my involvement in the best (female-led) organization at IIT, read <a href="{{ site.url }}/activities/wistem">this</a>. -->
+    For a little reading material, try <a href="{{ site.url }}/blog">this</a>. 
+    And for fun pictures, explore <a href="{{ site.url }}/potpourri">my gallery</a>!
   </p>
 
   <p>
