--- a/potpourri.html
+++ b/potpourri.html
@@ -6,7 +6,7 @@ title: Potpourri
 <div class="text-center">
     <p>
         My personal brand of hedonism, among other things, lies in spontaneity of traveling.
-        Despite the uncertain years that come with growing up, my most consistent trait has been a love for food, 
+        My most consistent trait is a love for food, 
         exploration, culture, art, and all things new. 
     </p>
 
